fixed dark mode about page

--- a/components/about/ourGallery/style.module.scss
+++ b/components/about/ourGallery/style.module.scss
@@ -1,6 +1,12 @@
 @import "~/styles/partials/config";
 
 .ourGallery {
+  
+  &.ourGalleryDark {
+    background-color: color(input-bg);
+    color: color(primary-white);
+  }
+
   .ourGalleryTitle {
     font-size: text(normal);
     font-weight: 700;
